force-app/main/default/objects/License__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>