force-app/main/default/objects/License__c/fields/License_Id__c.field-meta.xml
<CustomField>
    <fullName>License_Id__c</fullName>
    <label>License Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>