force-app/main/default/objects/License__c/fields/Node_Id__c.field-meta.xml
<CustomField>
    <fullName>Node_Id__c</fullName>
    <externalId>true</externalId>
    <label>Node Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>